feat(navBar): add navbar scss file

--- a/frontend/src/style/style.scss
+++ b/frontend/src/style/style.scss
@@ -10,7 +10,7 @@
 @import "../cmps/AppHeader/app-header";
 @import "../pages/HomePage/home-page";
 @import "../pages/HomePage/components/GameTypeModal/game-type-modal";
-
+@import "../cmps/NavBar/navbar";
 
 // PAGES
 @import "./pages/main";
