--- a/frontend/src/style/style.scss
+++ b/frontend/src/style/style.scss
@@ -11,7 +11,7 @@
 @import "../pages/HomePage/home-page";
 @import "../pages/HomePage/components/GameTypeModal/game-type-modal";
 @import "../cmps/NavBar/navbar";
-
+@import "../cmps/PlayModal/play-modal";
 // PAGES
 @import "./pages/main";
 @import "../pages/GamePage/game-page";
