--- a/frontend/src/cmps/NavBar/_navbar.scss
+++ b/frontend/src/cmps/NavBar/_navbar.scss
@@ -11,8 +11,15 @@
         color: #fff;
         font-size: 18px;
         border-radius: 25px;
+        display: flex;
+        align-items: center;
         &:hover {
             background-color: rgba(27, 27, 27, 0.404);
+        }
+        span {
+            margin-right: 5px;
+            display: flex;
+            align-items: center;
         }
     }
 }
