--- a/frontend/src/cmps/NavBar/_navbar.scss
+++ b/frontend/src/cmps/NavBar/_navbar.scss
@@ -1,5 +1,9 @@
 .nav-bar {
     padding: 0 2vw;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
     img {
         object-fit: cover;
     }
